<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:scrollbars="vertical"
    android:fillViewport="true">

<com.example.margaux.test03blocnote.Slider
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slider"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:orientation="vertical"
    style="@style/myBackground"
    >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/to_hide"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            style="@style/myButtonStyle" />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/button1"
            style="@style/myButtonStyle" />
        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/button2"
            android:layout_toEndOf="@id/button2"
            style="@style/myButtonStyle" />
        <TextView
            android:id="@+id/smiley_title"
            android:text="@string/smiley_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="15dp"
            android:layout_alignTop="@+id/smiley_happy"
            style="@style/myText"/>
        <ImageButton
            android:id="@+id/smiley_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_toRightOf="@id/smiley_title"
            android:layout_toEndOf="@id/smiley_title"
            android:layout_below="@id/button1"
            android:src="@drawable/smiley_happy"
            style="@style/translucide"/>
        <ImageButton
            android:id="@+id/smiley_super_happy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@id/smiley_happy"
            android:layout_toEndOf="@id/smiley_happy"
            android:layout_alignTop="@id/smiley_happy"
            android:src="@drawable/smiley_super_happy"
            style="@style/translucide"/>
        <ImageButton
            android:id="@+id/smiley_blink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@id/smiley_happy"
            android:layout_toEndOf="@id/smiley_super_happy"
            android:layout_alignTop="@id/smiley_happy"
            android:src="@drawable/smiley_blink"
            style="@style/translucide"/>
        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/smiley_happy"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal"
            android:checkedButton="@+id/radioB1">
            <RadioButton
                android:id="@+id/radioB1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="45dp"
                android:text="@string/color1"
                android:textColor="@color/color1"/>
            <RadioButton
                android:id="@+id/radioB2"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="45dp"
                android:text="@string/color2"
                android:textColor="@color/color2"/>
            <RadioButton
                android:id="@+id/radioB3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="45dp"
                android:text="@string/color3"
                android:textColor="@color/color3" />
        </RadioGroup>
        <Button
            android:id="@+id/buttonShowHide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radioGroup"
            android:layout_marginTop="25dp"
            android:layout_centerHorizontal="true"
            style="@style/myButtonShowHide"/>
    </RelativeLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="25dp"
        android:shrinkColumns="1">
        <View
            android:background="@color/color_separator"
            android:layout_height="2dp"
            android:layout_marginBottom="15dp"/>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/edit_title"
                android:text="@string/edit_title"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                style="@style/myText"
                />
            <EditText
                android:id="@+id/editText"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:inputType="textMultiLine"
                android:background="@color/textEditBackgroundcolor"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="25dp">
            <TextView
                android:id="@+id/previsualisation_title"
                android:text="@string/Prévisualisation_title"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                style="@style/myText" />
            <TextView
                android:id="@+id/previsualisation_content"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:scrollbars="vertical"
                style="@style/myText"
                android:text="                                                                        \n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n"
                />
        </TableRow>

    </TableLayout>
</com.example.margaux.test03blocnote.Slider>
</ScrollView>